<resources>
    <string name="app_name">中国象棋</string>

    <string name="hello_world">Hello world!</string>
    <string name="low_rank">初 级</string>
    <string name="middle_rank">中 级</string>
    <string name="high_rank">高 级</string>
    <string name="bluetooth_conn">蓝牙对战</string>
    <string name="new_game">新局</string>
    <string name="flip_board">翻转</string>
    <string name="undo">悔棋</string>
    <string name="is_win">Win</string>
    <string name="AI_Thinking_wait">电脑正在思考中...请稍后再试！</string>
    <string name="AI_Thinking_disturb">电脑正在思考中...请勿打扰！</string>
    <string name="AI_Thinking">电脑正在思考中...</string>
    <string name="human_win">恭喜获胜！再来一局？</string>
    <string name="opposite_win">你输了！再来一局？</string>
    <string name="is_check">被将军啦！</string>
    <string name="is_game_over">该局已结束啦！开始新局吧^_^</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="mv_unLegal">请按规则走棋</string>
    <string name="title_activity_setting">游戏设置</string>

    <string name="my_color">我方颜色：</string>
    <string name="red_color">红色</string>
    <string name="black_color">黑色</string>
    <string name="my_side">我方先后手：</string>
    <string name="offensive_side">先手</string>
    <string name="defensive_side">后手</string>
    <string name="AI_level">电脑水平：</string>
    <string name="btn_ok">开始</string>
    <string name="btn_cancel">取消</string>
    <string name="bluetooth_disable">蓝牙不可用</string>
    <string name="opponent">对手：</string>

    <!--  DeviceListActivity -->
    <string name="scanning">搜索设备中...</string>
    <string name="select_device">请选择连接设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">未发现设备</string>
    <string name="title_paired_devices">配对设备</string>
    <string name="title_other_devices">其他设备</string>
    <string name="button_scan">搜索设备</string>
    <string name="not_connected">蓝牙未连接</string>
    <string name="bt_client">连接游戏</string>
    <string name="bt_server">创建游戏</string>
    <string name="bt_game">蓝牙游戏：</string>
    <string name="wait">等待连接...</string>
    <string name="quit">退出</string>
    <string name="btn_quit">退出</string>
    <string name="sure_to_quit">确定要退出吗？</string>
    <string name="connected_to">已连接到：</string>
    <string name="long_lose">长将作负，请不要气馁！再来一局？</string>
    <string name="long_win">对方长将作负，祝贺你取得胜利！再来一局？</string>
    <string name="he_qi">双方不变作和，辛苦了！再来一局？</string>
    <string name="long_he_qi">超过自然限着作和，辛苦了！再来一局？</string>
    <string name="unable_connect">未能连接设备</string>
    <string name="connect_lost">连接已断开</string>
</resources>
