<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luojiawei.chinesechess.chinesechess4android.Setting"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="23sp"
        android:gravity="center"
        android:text="@string/title_activity_setting"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:text="@string/my_color"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/red_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_color"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black_color"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:text="@string/my_side"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/offensive_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offensive_side"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defensive_side"/>
        </RadioGroup>

        <TextView
            android:id="@+id/txt_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:text="@string/AI_level"/>
        <RadioGroup
            android:id="@+id/rg_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:visibility="gone"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/low_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_rank"/>
            <RadioButton
                android:id="@+id/middle_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_rank"/>
            <RadioButton
                android:id="@+id/high_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_rank"/>
        </RadioGroup>
    </GridLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"/>

    </LinearLayout>
</LinearLayout>
